fix dark mode, radios e font interna dos inputs

--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -8,6 +8,7 @@ body {
 
     input {
         border-color: var(--border);
+        color: var(--txtcolor);
     }
 
     span,
