--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -35,11 +35,11 @@ input[type="radio"] {
     padding: 1px;
     /* background-color only for content */
     border: 1px solid var(--border);
-    background-color: #e7e6e710;
+    background-color: var(--bgcolor);
     border-radius: 50%;
     flex-grow: 0;
 }
 
 input[type="radio"]:checked {
-    background-color: black;
+    background-color: var(--inputradiocheckedbg);
 }
